--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UniDesign</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./index.css" />
-    <script type="module" src="./js/index.js" defer></script>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header class="header">
